[gd_scene load_steps=11 format=2]

[ext_resource path="res://objects/actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/0x72_16x16RobotTileset.v1.png" type="Texture" id=2]
[ext_resource path="res://assets/Jump17.wav" type="AudioStream" id=3]
[ext_resource path="res://menus/PauseMenu.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.24735
height = 11.5935

[sub_resource type="Animation" id=2]
resource_name = "robot1_idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 208, 16, 16, 32 ), Rect2( 224, 16, 16, 32 ), Rect2( 240, 16, 16, 32 ), Rect2( 256, 16, 16, 32 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "robot1_walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 288, 16, 16, 32 ), Rect2( 304, 16, 16, 32 ), Rect2( 320, 16, 16, 32 ), Rect2( 336, 16, 16, 32 ), Rect2( 352, 16, 16, 32 ), Rect2( 368, 16, 16, 32 ), Rect2( 384, 16, 16, 32 ), Rect2( 400, 16, 16, 32 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "robot2_idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 208, 48, 16, 32 ), Rect2( 224, 48, 16, 32 ), Rect2( 240, 48, 16, 32 ), Rect2( 256, 48, 16, 32 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "robot2_walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 288, 48, 16, 32 ), Rect2( 304, 48, 16, 32 ), Rect2( 320, 48, 16, 32 ), Rect2( 336, 48, 16, 32 ), Rect2( 352, 48, 16, 32 ), Rect2( 368, 48, 16, 32 ), Rect2( 384, 48, 16, 32 ), Rect2( 400, 48, 16, 32 ) ]
}

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.227451, 0.227451, 0.227451, 0.333333 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/robot1_idle = SubResource( 2 )
anims/robot1_walk = SubResource( 3 )
anims/robot2_idle = SubResource( 4 )
anims/robot2_walk = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 208, 16, 16, 32 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -40 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )

[node name="HoldPosition2D" type="Position2D" parent="."]
position = Vector2( 25, 0 )

[node name="DialogueTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="GameMessageTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="FutilityTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="ChatBubble" type="Panel" parent="."]
visible = false
margin_left = 11.0
margin_top = -67.0
margin_right = 245.0
margin_bottom = -9.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue" type="Label" parent="ChatBubble"]
margin_left = 3.0
margin_top = 3.0
margin_right = 231.0
margin_bottom = 54.0
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatBubble2" type="Panel" parent="."]
visible = false
margin_left = -249.0
margin_top = 83.0
margin_right = 248.0
margin_bottom = 102.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameMessage" type="Label" parent="ChatBubble2"]
margin_left = 2.48172
margin_top = 2.50755
margin_right = 495.482
margin_bottom = 16.5076
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpSoundEffect2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="PauseMenu" parent="." instance=ExtResource( 5 )]
[connection signal="timeout" from="DialogueTimer" to="." method="_on_DialogueTimer_timeout"]
[connection signal="timeout" from="GameMessageTimer" to="." method="_on_GameMessageTimer_timeout"]
[connection signal="timeout" from="FutilityTimer" to="." method="_on_FutilityTimer_timeout"]
